# Logger-chan

./: .gitignore  CMakeLists.txt  FileLogging.txt  README.md  client.json  config.json  shell_log_src.sh  toolchain.cmake
Server/: CMakeLists.txt  SOMEIP_Server.cpp  server.json
inc/: CPUTelemetrySource.hpp  Common.hpp  ConsoleSinkImpl.hpp  FileSinkImpl.hpp  FileTelemetrySourceImpl.hpp  ILogSink.hpp  ITelemetrySource.hpp  LogFormatter.hpp  LogManager.hpp  LogManagerBuilder.hpp  LogMessage.hpp  LogSinkFactory.hpp  MemTelemetrySourceImpl.hpp  Policies.hpp  RingBuffer.hpp  SafeFile.hpp  SomeIPTelemetrySourceImpl.hpp  TelemetryApplication.hpp
local_config/: vsomeip-local.json
src/: CPUTelemetrySource.cpp  Common.cpp  ConsoleSinkImpl.cpp  FileSinkImpl.cpp  FileTelemetrySourceImpl.cpp  LogManager.cpp  LogMessage.cpp  LogSinkFactory.cpp  MemTelemetrySourceImpl.cpp  SOMEIP_Server.cpp  SafeFile.cpp  SomeIPTelemetrySourceImpl.cpp  TelemetryApplication.cpp  main.cpp  main_client.cpp
telemetry_gui/: CMakeLists.txt  README.md
telemetry_gui/inc/: GUIServer.hpp  GUISink.hpp  LogManager.hpp  MainWindow.hpp  ServerBridge.hpp
telemetry_gui/src/: GUIServer.cpp  GUISink.cpp  MainWindow.cpp  main.cpp
